--- a/login.html
+++ b/login.html
@@ -6,10 +6,12 @@
   <meta name="discription" content="content">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/initial.min.css">
+  <link rel="stylesheet" href="./css/swiper-bundle.css">
+  <link rel="stylesheet" href="./css/swiper_customize.css">
   <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/sub05.css">
+  <link rel="stylesheet" href="./css/sub07.css">
   <script type="text/javascript" defer="defer" src="./js/jquery_3.5.1.js"></script>
-  <script type="text/javascript" defer="defer" src="./js/common.js"></script>
+  <script type="text/javascript" defer="defer" src="./js/notice_info.js"></script>
   <title>모델로피부과</title>
 </head>
 
@@ -18,7 +20,7 @@
   <div id="header_wrap">
     <div class="head">
       <div class="logo">
-        <a href="main.html"><img src="./img/logo.png" alt="logo"></a>
+        <a href="main.html"><img src="./img/logo2.png" alt="logo"></a>
       </div>
       <div class="right_menu">
         <div class="login">
@@ -33,7 +35,7 @@
         </div>
         <div class="all_menu">
           <a href="#">
-            <img src="./img/all_menu2.png" alt="all_meun" class="all_menu_icon">
+            <img src="./img/all_menu.png" alt="all_meun" class="all_menu_icon">
           </a>
         </div>
       </div>
@@ -366,127 +368,32 @@
     </div>
   </div>
   <!-- content 영역 -->
-  <div id="sub_main_wrap" class="sub05_main_wrap">
+  <div id="sub_main_wrap" class="login_main_wrap">
     <div class="text_box">
       <div class="title">
-        <span>MODELO LIFTING</span>
-        <h3>마침내, 중력을 거스르다</h3>
-        <div class="line"></div>
-        <span>동안을 유지하는 최상의 방법</span>
+        <h3>Login</h3>
+        <span>더 많은 정보를 보시려면 로그인해주세요</span>
       </div>
     </div>
-    <div class="scroll_icon"></div>
   </div>
-  <section id="section01">
-    <div class="section_wrap section01_wrap">
-      <h3 class="title">리프팅과 탄력은 동시에 개선되어야 한다.</h3>
-      <div class="con01_wrap">
-        <p>
-          피부의 탄력과 처짐은 ‘겉피부’만의 문제가 아닙니다. 피부는 살을 덮고 있는 얇은 막에 불과할 뿐 피부 속 지방, 80여개의 잔근육, 근막 이 모든 것이 복합적으로 노화되고 피로가 쌓여 얼굴선을 무너뜨리게 되는 것입니다. 속과 겉을 동시에 개선하여 처짐과 뭉침, 탄력을 동시에 개선하는 것이 윤곽시술의 목표입니다.
-        </p>
+  <section id="login_section">
+    <div class="login_box">
+      <h3 class="title">로그인</h3>
+      <form>
+        <fieldset>
+          <input type="text" name="id" class="id" size="20" maxlength="20" placeholder="아이디">
+          <input type="password" name="password" class="password" size="20" maxlength="20" placeholder="비밀번호">
+          <input type="submit" value="로그인" class="submit_btn">
+          <div class="check_box">
+            <input type="checkbox" name="check" id="check">
+            <label for="check">자동로그인</label>
+          </div>
+        </fieldset>
+      </form>
+      <div class="login_info">
+        <div class="lost"><a href="#">아이디 비밀번호 찾기</a></div>
+        <div class="join"><a href="join.html">회원 가입</a></div>
       </div>
-    </div>
-  </section>
-  <section id="section02">
-    <div class="section_wrap section02_wrap">
-      <h3>당신에게 꼭 맞는 시술은?</h3>
-      <p>다양한 레이저구비 - 정확한 진단 - 정확한 시술</p>
-      <div class="con02_wrap">
-        <ul>
-          <li class="con02_btn con02_btn01">노화 1단계</li>
-          <li class="con02_btn con02_btn02">노화 2단계</li>
-          <li class="con02_btn con02_btn03">노화 3단계</li>
-        </ul>
-        <div class="con02_list_active con02_list01">
-          <div class="con02_preview">
-            <img src="./img/sub05/sub0502_img01.jpg" alt="con02_img">
-          </div>
-          <div class="more_view_btn">+ 더 알아보기</div>
-          <div class="more_content">
-            <p>
-              <span>· 피부나이 20대 중반 - 30대 초반</span><br>
-              <span>· 진&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;단</span>&nbsp;&nbsp;&nbsp;&nbsp;모공관리 및 약한 리프팅 시작<br><i></i>이미 커진 모공은 축소하기 어려우므로 모공관리 필수<br>
-              <span>· 처&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>&nbsp;&nbsp;&nbsp;&nbsp;리프팅 「더블로 얼굴전체」<br><i></i>타이트닝 및 모공관리 「컴포트듀얼」
-            </p>
-            <div class="close_view_btn">+ 접어두기</div>
-          </div>
-        </div>
-        <div class="con02_list_active con02_list02">
-          <div class="con02_preview">
-            <img src="./img/sub05/sub0502_img02.jpg" alt="con02_img">
-          </div>
-          <div class="more_view_btn">+ 더 알아보기</div>
-          <div class="more_content">
-            <p>
-              <span>· 피부나이 30대</span><br>
-              <span>· 진&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;단</span>&nbsp;&nbsp;&nbsp;&nbsp;처진 부위 개선 및 뭉침예방<br><i></i>처짐이 본격적으로 시작될 시기, 보험을 들 듯 관리하는 것이 중요<br>
-              <span>· 처&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>&nbsp;&nbsp;&nbsp;&nbsp;처짐 및 뭉침 개선 및 예방 「턱 선 울쎄라 450샷」<br><i></i>모공축소 및 탄력 개선 「써마지」
-            </p>
-            <div class="close_view_btn">+ 접어두기</div>
-          </div>
-        </div>
-        <div class="con02_list_active con02_list03">
-          <div class="con02_preview">
-            <img src="./img/sub05/sub0502_img03.jpg" alt="con02_img">
-          </div>
-          <div class="more_view_btn">+ 더 알아보기</div>
-          <div class="more_content">
-            <p>
-              <span>· 피부나이 40대 후반 이상</span><br>
-              <span>· 진&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;단</span>&nbsp;&nbsp;&nbsp;&nbsp;탄력이 급격히 떨어져 처짐이 나타나는 동시에 입 옆에 뭉침,<br><i></i>모공확장으로 전반적으로 복합적인 치료가 필요한 상태<br>
-              <span>· 처&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;방</span>&nbsp;&nbsp;&nbsp;&nbsp;얼굴 리프팅 및 뭉침 개선 「실리프팅 + 울쎄라」<br><i></i>탄력 및 모공관리 「얼굴전체 써마지」
-            </p>
-            <div class="close_view_btn">+ 접어두기</div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <section id="section03">
-    <div class="pop_click_bg"></div>
-    <div class="section_wrap section03_wrap">
-      <h3 class="title">당신에게 꼭 맞는 처방이 가능한 이유?</h3>
-      <p>
-        <span>고가의 써마지를 받았는데 효과가 없다?</span>
-        재생해야하는 콜라겐이 없는 분들에겐 고가의 써마지도 무용지물이 될 수 있습니다. 사람마다 노화의 정도, 지방과 근육의 양, 근막의 생김새 등이 다르므로 탄력리프팅 시술 시 본인에게 가장 최상의 레이저를 선택하는 것은 성공적인 시술을 위한 첫 걸음입니다.
-      </p>
-      <div class="con03_wrap">
-        <ul class="pop_list">
-          <li class="popup pop01">울쎄라 +</li>
-          <li class="popup pop02">써마지 +</li>
-          <li class="popup pop03">더블로 +</li>
-          <li class="popup pop04">컴포트듀얼 +</li>
-          <li class="popup pop05">인피니 +</li>
-          <li class="popup pop06">리펌ST +</li>
-          <li class="popup pop07">실리프팅 +</li>
-          <li class="popup pop08">퀵리프팅 +</li>
-          <li class="popup pop09">물방울리프팅 +</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-  <section id="section04">
-    <div class="section_wrap section04_wrap">
-      <div class="com04_wrap">
-        <span>시술자의 격이 다릅니다.<br>모델로는 피부와 레이저분야의 대한민국 최고 전문의가 직접 시술합니다.</span>
-        서울의대 피부과 전문의 / 하버드 레이저센터 전임연구원 / 대한민국 최고의 울쎄라 전문의로 3회 연속 선정
-      </div>
-    </div>
-  </section>
-  <section id="section05">
-    <div class="section_wrap section05_wrap">
-      <ul>
-        <li>
-          <h3 class="title">체계적인 통증관리 시스템</h3>
-          <p>
-            <span>모델로는 마취과전문의를 통한 철저한 통증관리를 통해 효과를 더욱 높입니다.</span>
-            더블로 역시 울쎄라처럼 최상의 강도로 시술받을 경우 참지 못할 통증이 전달될 수 있습니다. 최상의 결과를 위해서는 체계적인 통증관리 시스템이 무엇보다 중요합니다. 모델로피부과는 강도를 높여야하는 부위에 강도를 낮추지 않고 최상의 강도로 시술하기 위해 마취연고, 주사, 마취주사를 통한 체계적인 통증관리시스템을 도입하였습니다.
-          </p>
-        </li>
-        <li>
-          <img src="./img/sub05/sub0502_img04.jpg" alt="section05_img">
-        </li>
-      </ul>
     </div>
   </section>
   <!-- footer 영역 -->
