--- a/sub01.html
+++ b/sub01.html
@@ -6,16 +6,12 @@
   <meta name="discription" content="content">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/initial.min.css">
-  <link rel="stylesheet" href="./css/swiper-bundle.css">
-  <link rel="stylesheet" href="./css/swiper_customize.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/sub01.css">
   <script type="text/javascript" defer="defer" src="./js/jquery_3.5.1.js"></script>
   <script type="text/javascript" defer="defer" src="./js/common.js"></script>
-  <script type="text/javascript" defer="defer" src="./js/sub0102.js"></script>
   <title>모델로피부과</title>
 </head>
-
 <body>
   <!-- header 영역 -->
   <div id="header_wrap">
@@ -395,7 +391,7 @@
               <div class="counter">1</div>
               <span>위</span>
             </div>
-            <div class="line"></div>
+            <div class="ani_line"></div>
           </li>
           <li>
             <div class="info_txt">필러·보톡스 시술 건 수</div>
@@ -403,7 +399,7 @@
               <div class="counter">135</div>,<div class="counter">495</div>
               <span>건</span>
             </div>
-            <div class="line"></div>
+            <div class="ani_line"></div>
           </li>
           <li>
             <div class="info_txt">모델로피부과 역사</div>
@@ -411,7 +407,7 @@
               <div class="counter">18</div>
               <span>건</span>
             </div>
-            <div class="line"></div>
+            <div class="ani_line"></div>
           </li>
           <li>
             <div class="info_txt">학회 및 논문발표건수 (2002-2019년 9월 기준)</div>
@@ -419,7 +415,7 @@
               <div class="counter">102</div>
               <span>건</span>
             </div>
-            <div class="line"></div>
+            <div class="ani_line"></div>
           </li>
         </ul>
       </div>
