--- a/sub07.html
+++ b/sub07.html
@@ -6,8 +6,6 @@
   <meta name="discription" content="content">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/initial.min.css">
-  <link rel="stylesheet" href="./css/swiper-bundle.css">
-  <link rel="stylesheet" href="./css/swiper_customize.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/sub07.css">
   <script type="text/javascript" defer="defer" src="./js/jquery_3.5.1.js"></script>
@@ -399,153 +397,153 @@
             <td class="td_datetime">1433</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">44</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">"병원이전" 10월 19일 이전</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.11.20</td>
+            <td class="td_datetime">1233</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">43</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">[경항신문] 서구일 박사, "한국형 보둘리눔치료" 중국어판 출간</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.11.01</td>
+            <td class="td_datetime">2133</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">42</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">모델로피부과에 '비정상회담' 다니엘린데만이 떴다?!</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.11.01</td>
+            <td class="td_datetime">2233</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">41</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">해외 방송 기자단, 의료진 주목! 메디컬 한류 이끄는 모델로피부과</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.10.30</td>
+            <td class="td_datetime">500</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">40</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">서구일원장, "최여진과 함께하는 여성공감 토크콘서트" 초청</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.10.21</td>
+            <td class="td_datetime">3323</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">39</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">모델로피부과 울쎄라 최다 시술병원, "골든리코드 어워드" 수상</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.09.30</td>
+            <td class="td_datetime">2033</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">38</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">서구일박사, 제22차 대한미용피부외과학회 "보톡스필러 시술전 환자평가 방법" 강의</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.09.13</td>
+            <td class="td_datetime">4125</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">37</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">[중앙일보] 서구일박사, 동양인 얼굴 윤곽에 맞는 보톡스 시술 가이드</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.09.05</td>
+            <td class="td_datetime">2333</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">36</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">모델로피부과 서울대학교병원 발전기금 5000만원 기부</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.09.01</td>
+            <td class="td_datetime">244</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">35</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">서구일박사, 세계의학 출판사 스프링거에서 영문판교과서 출판 기념</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.09.01</td>
+            <td class="td_datetime">983</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">34</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">[한국경제]"보툴리눔톡신 치료" 1세대 주자, 서구일 원장</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.08.28</td>
+            <td class="td_datetime">593</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">33</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">[경향신문]서구일박사, "미인상 다른 동-서양, 보톡스 시술로 달라야한다"</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.08.25</td>
+            <td class="td_datetime">342</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">32</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">TV조선 엄마가 뭐길래_이혜원편 방송!</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.08.22</td>
+            <td class="td_datetime">1109</td>
           </tr>
           <tr>
-            <td class="td_num">45</td>
+            <td class="td_num">31</td>
             <td class="td_subject">
               <div class="td_sub_txt">
-                <a href="#">보튤리눔독소의 교감신경절 차단효과 논문 발표</a>
+                <a href="#">2018 모델로 제주도 워크샵 후기</a>
               </div>
             </td>
-            <td class="td_datetime">2020.12.01</td>
-            <td class="td_datetime">1433</td>
+            <td class="td_datetime">2020.08.17</td>
+            <td class="td_datetime">5338</td>
           </tr>
         </tbody>
       </table>
       <nav class="page_wrap">
         <span class="pg_num">
-          <a href="sub07.html">1</a>
-          <a href="sub07_01.html">2</a>
-          <a href="sub07_02.html">3</a>
-          <a href="sub07_03.html">4</a>
+          <a href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
         </span>
       </nav>
       <fieldset id="search">
