--- a/main.html
+++ b/main.html
@@ -121,7 +121,8 @@
               <p>
                 <span>시술 직후부터 완벽할 수 있다는 것</span><br>
                 모델로 필러는 다시 찾는 데 이유가 있습니다.
-                <br>모델로는 단순한 뷰티를 넘어 자신만의 우아한 이미지를 만들어드립니다.
+                <br>모델로는 단순한 뷰티를 넘어 자신만의
+                <br>우아한 이미지를 만들어드립니다. 
                 <br>모델로에서 자신만의 아름다움을 극대화 시켜보세요.
               </p>
             </div>
@@ -176,8 +177,8 @@
               <h3>v라인</h3>
               <p>
                 <span>2017' 18' 19' 골든레코드어워드 3회 수상</span><br>
-                모델로피부과는 안티에이징 20년의 풍부한 임상경험을 바탕으로 극대화 된
-                <br>V라인리프팅 효과를 경험하실 수 있습니다.
+                모델로피부과는 안티에이징 20년의 풍부한 임상경험을 바탕으로
+                <br>극대화 된 V라인리프팅 효과를 경험하실 수 있습니다.
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -210,8 +211,9 @@
               <p>
                 <span>주근깨와 잡티, 난치성 기미까지</span><br>
                 진단과 처방이 정확하다면 어렵지 않습니다.
-                <br>모델로는 다양한 레이저를 구비하여 복합처방이 가능한 병원으로 개인의 피부
-                <br>병변의 특성에 맞게 최상의 치료계획을 세워드립니다.
+                <br>모델로는 다양한 레이저를 구비하여
+                <br>복합처방이 가능한 병원으로 개인의 피부 병변의 특성에 
+                <br>맞게 최상의 치료계획을 세워드립니다.
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -247,8 +249,9 @@
               <p>
                 <span>세계 최초 종아리 보톡스를 개발한 모델로</span><br>
                 모델로피부과가 개발하여 세계적인 주목을 받은 종아리보톡스.
-                <br>아름다운 넥라인부터 더 길어보이는 종아리까지! 지방흡입과 운동으로
-                <br>절대 빠지지 않던 부분까지 완벽한 바디로 조각하는 모델로 바디 컨투어링
+                <br>아름다운 넥라인부터 더 길어보이는 종아리까지!
+                <br>지방흡입과 운동으로 절대 빠지지 않던 부분까지
+                <br>완벽한 바디로 조각하는 모델로 바디 컨투어링
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -586,7 +589,7 @@
   <!-- Initialize Swiper -->
   <script>
     var swiper = new Swiper(".mySwiper", {
-      slidesPerView: 1,
+      slidesPerView: 2,
       spaceBetween: 30,
       loop: true,
       navigation: {
