--- a/sub05.html
+++ b/sub05.html
@@ -120,7 +120,8 @@
               <p>
                 <span>시술 직후부터 완벽할 수 있다는 것</span><br>
                 모델로 필러는 다시 찾는 데 이유가 있습니다.
-                <br>모델로는 단순한 뷰티를 넘어 자신만의 우아한 이미지를 만들어드립니다.
+                <br>모델로는 단순한 뷰티를 넘어 자신만의
+                <br>우아한 이미지를 만들어드립니다. 
                 <br>모델로에서 자신만의 아름다움을 극대화 시켜보세요.
               </p>
             </div>
@@ -175,8 +176,8 @@
               <h3>v라인</h3>
               <p>
                 <span>2017' 18' 19' 골든레코드어워드 3회 수상</span><br>
-                모델로피부과는 안티에이징 20년의 풍부한 임상경험을 바탕으로 극대화 된
-                <br>V라인리프팅 효과를 경험하실 수 있습니다.
+                모델로피부과는 안티에이징 20년의 풍부한 임상경험을 바탕으로
+                <br>극대화 된 V라인리프팅 효과를 경험하실 수 있습니다.
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -209,8 +210,9 @@
               <p>
                 <span>주근깨와 잡티, 난치성 기미까지</span><br>
                 진단과 처방이 정확하다면 어렵지 않습니다.
-                <br>모델로는 다양한 레이저를 구비하여 복합처방이 가능한 병원으로 개인의 피부
-                <br>병변의 특성에 맞게 최상의 치료계획을 세워드립니다.
+                <br>모델로는 다양한 레이저를 구비하여
+                <br>복합처방이 가능한 병원으로 개인의 피부 병변의 특성에 
+                <br>맞게 최상의 치료계획을 세워드립니다.
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -246,8 +248,9 @@
               <p>
                 <span>세계 최초 종아리 보톡스를 개발한 모델로</span><br>
                 모델로피부과가 개발하여 세계적인 주목을 받은 종아리보톡스.
-                <br>아름다운 넥라인부터 더 길어보이는 종아리까지! 지방흡입과 운동으로
-                <br>절대 빠지지 않던 부분까지 완벽한 바디로 조각하는 모델로 바디 컨투어링
+                <br>아름다운 넥라인부터 더 길어보이는 종아리까지!
+                <br>지방흡입과 운동으로 절대 빠지지 않던 부분까지
+                <br>완벽한 바디로 조각하는 모델로 바디 컨투어링
               </p>
             </div>
             <div class="sub_gnb_right">
@@ -462,6 +465,166 @@
           <li class="popup pop08">퀵리프팅 +</li>
           <li class="popup pop09">물방울리프팅 +</li>
         </ul>
+        <div class="display_box">
+          <div class="pop_display popdisplay01">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img01.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>울쎄라 <span>Ulthera</span></h3>
+                <p>고강도 집적 초음파를 이용한 리프팅 및 주름치료 레이저입니다. 외과적인 절개 수술 없이 안면주름성형술(페이스리프팅)하는 차세대 주름치료 및 리프팅 장비로 칼로 절개하지 않고도 장착된 초음파 이미지 장치로 직접 피부 속 SMAS층을 보면서 피부 표면 아래 2 ~ 4.5mm깊이에 초음파열을 전달하여 시술할 수 있는 치료장비입니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon01.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay02">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img02.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>써마지 <span>Thermage</span></h3>
+                <p><span>연예인들이 가장 사랑하는 대표적인 탄력레이저</span>
+                  써마지리프팅은 강력한 고주파열이 심부 진피층을 자극하여 콜라겐 섬유나 탄력섬유의 수축과 재생을 촉진시켜 처진 피부를 올려주고 탄력을 증대시키는 대표적인 레이저 시술입니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon02.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay03">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img03.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>더블로 <span>Doublo</span></h3>
+                <p><span>리틀울쎄라. 울쎄라 시술 후 유지관리에 효과적인 레이저 시술</span>
+                  수술하지 않고도 피하지방층과 근육층 사이의 SMAS층까지 리프팅 할 수 있는 비수술적 페이스 리프팅 시술입니다. 더블로는 피부 처짐 개선을 물론 주름의 원인층을 재생시켜 노화의 근본적인 원인을 개선할 수 있습니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon03.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay04">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img04.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>컴포트듀얼 <span>Comfort Dual</span></h3>
+                <p><span>리틀울쎄라. 울쎄라 시술 후 유지관리에 효과적인 레이저 시술</span>
+                  2개의 전극을 사용하는 바이폴라 고주파 전류를 이용하여 얼굴과 체형의 늘어진 피부를 리프팅하며 콜라겐을 촉진시키고 피부 스스로 재생할 수 있도록 도와주어 안전하고 오랫동안 탄력있는 피부를 유지할 수 있게 도와줍니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon04.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay05">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img05.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>인피니 <span>Infini</span></h3>
+                <p><span>모공고민 끝, 모공축소에 탁월한 신개념 레이저</span>
+                  미세한 마이크로 니들을 통해 피부 속을 고주파로 자극하여 피부 진피층의 콜라겐과 엘라스틴의 재생, 리모델링을 유도하는 신개념 피부 시술법입니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon05.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay06">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img06.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>리펌 <span>Refirme</span></h3>
+                <p><span>통증없이 편안하게 피부재생</span>
+                  적외선 레이저와 고주파가 동시에 나오는 신기술 레이저 장비로 두 에너지의 장점만을 피부에 적용합니다. 진피층의 상층부에 열을 전달하고 하층부까지 열효과를 주어 리프팅과 타이트닝, 주름개선 등 피부재생 효과를 줍니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon06.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay07">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img07.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>실리프팅 <span>Lift</span></h3>
+                <p><span>30분 간단한 시술로 강력한 얼굴리프팅</span>
+                  식약청에서 허가받은 PDO소재의 녹는 실을 피부 속에 넣은 후 원하는 방향으로 당겨줘 처진 얼굴을 리프팅 시켜주는 시술입니다. 처짐의 정도가 심해 레이저로 해결하기 힘들거나 즉각적인 V라인효과를 원하는 분들에게 적합한 시술입니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon07.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay08">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img08.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>퀵리프팅 <span>Quick lift</span></h3>
+                <p><span>소부위 즉각적인 리프팅을 원할 때</span>
+                  입 옆, 볼살 등 특정한 부위의 즉각적인 리프팅을 원하는 분들에게 인기가 있는 시술로 점심시간에 받아도 될만큼 간단한 국소마취만으로 가능한 실리프팅입니다.</p>
+                <div class="popicon">
+                  <img src="./img/sub05/sub0502_pop_icon07.png" alt="popicon">
+                </div>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+          <div class="pop_display popdisplay09">
+            <div class="popleft">
+              <img src="./img/sub05/sub0502_pop_img09.jpg" alt="popimg">
+            </div>
+            <div class="popright">
+              <div class="poptext_box">
+                <h3>물방울리프팅 <span>Water drop Lifting</span></h3>
+                <p><span>꽉 찬 수분이 피부를 탱탱하고 생기있게</span>
+                  물방울리프팅은 특허출원된 LDM 기술력으로 초음파 파장이 교차되어 조사 되면서 피부 속의 수분을 진피 쪽으로 끌어올려 시술 후 즉시 피부가 촉촉하게 되고 맑아집니다. 피부 깊이를 조절하여 조사할 수 있어 효과적으로 리프팅 및 타이트닝 시술을 할 수 있습니다.</p>
+              </div>
+            </div>
+            <div class="pop_close_btn">
+              <img src="./img/sub05/sub0502_pop_close.png" alt="close_view_btn">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
