--- a/join.html
+++ b/join.html
@@ -383,7 +383,7 @@
         <p>회원가입약관 및 개인정보처리방침안내의 내용에 동의하셔야 회원가입 하실 수 있습니다.</p>
         <div class="check_all">
           <label for="allck">전체선택</label>
-          <input type="checkbox" id="allck">
+          <input type="checkbox" id="allck" class="ck">
         </div>
         <div id="frefister_term">
           <div class="title_box">
@@ -616,7 +616,7 @@ Copyright ⓒ 모델로클리닉 all rights reserved.  Contact to ces@modelo.co.
           </textarea>
           <fieldset class="frefister_agree">
             <label for="agree01">회원가입약관의 내용에 동의합니다.</label>
-            <input type="checkbox" name="agree" id="agree02">
+            <input type="checkbox" name="agree01" id="agree01" class="ck">
           </fieldset>
         </div>
         <div id="frefister_private">
@@ -648,8 +648,8 @@ Copyright ⓒ 모델로클리닉 all rights reserved.  Contact to ces@modelo.co.
             </table>
           </div>
           <fieldset class="frefister_agree">
-            <label for="agree01">회원가입약관의 내용에 동의합니다.</label>
-            <input type="checkbox" name="agree" id="agree02">
+            <label for="agree02">회원가입약관의 내용에 동의합니다.</label>
+            <input type="checkbox" name="agree" id="agree02" class="ck">
           </fieldset>
         </div>
       </form>
