--- a/sub03.html
+++ b/sub03.html
@@ -6,6 +6,7 @@
   <meta name="discription" content="content">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/initial.min.css">
+  <link rel="stylesheet" href="./css/swiper-bundle.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/sub03.css">
   <script type="text/javascript" defer="defer" src="./js/jquery_3.5.1.js"></script>
@@ -602,7 +603,7 @@
       <h3 class="title">따라할 수 있지만 결과가 같을수는 없습니다.</h3>
       <p>로그인 후 모델로 필러의 효과를 확인하세요.</p>
       <img src="./img/sub03/sub0305_btm_logout.jpg" alt="section08_img">
-      <div class="more_view_btn"><a href="login.html">+ 전후사진 더보기</a></div>
+      <div class="login_btn"><a href="login.html">+ 전후사진 더보기</a></div>
     </div>
   </section>
   <!-- footer 영역 -->
