🤩index.html  수정

--- a/sub01.html
+++ b/sub01.html
@@ -17,7 +17,7 @@
   <div id="header_wrap">
     <div class="head">
       <div class="logo">
-        <a href="main.html"><img src="./img/logo.png" alt="logo"></a>
+        <a href="index.html"><img src="./img/logo.png" alt="logo"></a>
       </div>
       <div class="right_menu">
         <div class="login">
@@ -301,7 +301,7 @@
   </div>
   <div id="all_menu">
     <div class="all_menu_logo">
-      <a href="main.html"><img src="./img/all_menu_logo.png" alt="all_menu_logo"></a>
+      <a href="index.html"><img src="./img/all_menu_logo.png" alt="all_menu_logo"></a>
     </div>
     <div class="all_menu_close"></div>
     <div class="all_menu_inner">
