--- a/join_next.html
+++ b/join_next.html
@@ -18,7 +18,7 @@
   <div id="header_wrap">
     <div class="head">
       <div class="logo">
-        <a href="main.html"><img src="./img/logo2.png" alt="logo"></a>
+        <a href="index.html"><img src="./img/logo2.png" alt="logo"></a>
       </div>
       <div class="right_menu">
         <div class="login">
@@ -302,7 +302,7 @@
   </div>
   <div id="all_menu">
     <div class="all_menu_logo">
-      <a href="main.html"><img src="./img/all_menu_logo.png" alt="all_menu_logo"></a>
+      <a href="index.html"><img src="./img/all_menu_logo.png" alt="all_menu_logo"></a>
     </div>
     <div class="all_menu_close"></div>
     <div class="all_menu_inner">
@@ -422,7 +422,7 @@
         </div>
       </form>
       <div class="confirm_btn">
-        <a href="main.html" class="submit">가입하기</a>
+        <a href="index.html" class="submit">가입하기</a>
       </div>
     </div>
   </section>
